# namimado

./: CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  openapi.yaml
.cargo/: config.toml
assets/: inspector.html
docs/: browser-landscape.md  integration.md
examples/normalize-packs/: blocker-trackers.lisp  bootstrap.lisp  html5.lisp  mui.lisp  shadcn-emit.lisp  shadcn.lisp  tailwind.lisp  vim-mode.lisp
module/: default.nix
src/: app.rs  config.rs  gpu.rs  http_server.rs  main.rs  mcp.rs  scripting.rs  service.rs  theme.rs  typescape.rs
src/api/: mod.rs
src/browser/: bookmark.rs  download.rs  history.rs  mod.rs  navigation.rs  tab.rs  tabs.rs
src/chrome/: mod.rs  sidebar.rs  statusbar.rs  toolbar.rs
src/input/: keybindings.rs
src/ipc/: bridge.rs
src/render/: chrome.rs  layout.rs  mod.rs
src/webview/: engine.rs  mod.rs  substrate.rs
tests/: packs_compile.rs
