[package]
name = "namimado"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Desktop web browser — Servo engine + garasu chrome"
repository = "https://github.com/pleme-io/namimado"

[features]
default = []
full = ["browser-core", "gpu-chrome"]
browser-core = ["dep:nami-core", "dep:reqwest"]
gpu-chrome = ["dep:garasu", "dep:egaku", "dep:irodzuki", "dep:shikumi"]

[dependencies]
# Browser core (shared with aranami) — DOM + CSS + layout + Lisp substrate.
# Pulls in the 12 def* DSLs: transforms, scrape, alias, plan, predicate,
# agent, state, effect, derived, query, route, component.
nami-core = { git = "ssh://git@github.com/pleme-io/nami-core", branch = "main", features = ["lisp", "eval"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

# GPU browser chrome
garasu = { git = "https://github.com/pleme-io/garasu", optional = true }
egaku = { git = "https://github.com/pleme-io/egaku", optional = true }
irodzuki = { git = "https://github.com/pleme-io/irodzuki", optional = true }
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }

# Servo browser engine (embedded)
# servo = { git = "https://github.com/servo/servo", features = ["embedding"] }
# Servo is not yet packaged as a simple crate — integration requires building
# from servo/servo source tree. For now we define the trait-based engine interface
# and wire Servo in via the Nix build (substrate).

# Windowing
winit = "0.30"

# Scripting and hotkeys
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }

# MCP server
kaname = { git = "https://github.com/pleme-io/kaname" }
schemars = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Standard
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
