[package]
name = "namimado"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Desktop web browser — Servo engine + garasu chrome"
repository = "https://github.com/pleme-io/namimado"

[features]
default = ["browser-core", "http-server", "gpu-chrome"]
full = ["browser-core", "gpu-chrome", "http-server"]
browser-core = ["dep:nami-core", "dep:reqwest"]
gpu-chrome = [
  "dep:garasu", "dep:egaku", "dep:shikumi",
  "dep:wgpu", "dep:glyphon", "dep:pollster",
]
# HTTP REST server — one face of the multi-face API. OpenAPI spec at
# ./openapi.yaml is the source of truth; this feature wires axum
# handlers to the shared `service::NamimadoService`.
http-server = ["dep:axum"]

[dependencies]
# Browser core (shared with aranami) — DOM + CSS + layout + Lisp substrate.
# Pulls in the 12 def* DSLs: transforms, scrape, alias, plan, predicate,
# agent, state, effect, derived, query, route, component.
nami-core = { git = "https://github.com/pleme-io/nami-core", branch = "main", features = ["lisp", "eval", "wasm", "signatures"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

# HTTP server (one face of the multi-face API)
axum = { version = "0.8", optional = true }

# Native GPU window — used by `gpu-chrome`, versions pinned to garasu's.
wgpu = { version = "25", optional = true }
glyphon = { version = "0.9", optional = true }
pollster = { version = "0.4", optional = true }

# GPU browser chrome
garasu = { git = "https://github.com/pleme-io/garasu", optional = true }
egaku = { git = "https://github.com/pleme-io/egaku", optional = true }
irodzuki = { git = "https://github.com/pleme-io/irodzuki" }
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }

# Servo browser engine (embedded)
# servo = { git = "https://github.com/servo/servo", features = ["embedding"] }
# Servo is not yet packaged as a simple crate — integration requires building
# from servo/servo source tree. For now we define the trait-based engine interface
# and wire Servo in via the Nix build (substrate).

# Windowing
winit = "0.30"

# Scripting and hotkeys
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }

# MCP server
kaname = { git = "https://github.com/pleme-io/kaname" }
schemars = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Standard
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6.0"
blake3 = "1.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
